<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MaskedNoiseActivity!</string>
    <string name="app_name">White Noise Generator</string>
    <string name="title">White Noise - Band Passed</string>
    <string name="hz">Hz</string>
    <string name="centerFrequency">Center</string>
    <string name="volume">Volume</string>
    <string name="attenuation">Attenuation</string>
    <string name="bandwidth">Band Width</string>
    <string name="pct">%</string>
    <string name="db">dB</string>
</resources>
